[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "tychopy"
version = "0.1.0"
description = "High-speed, extensible, object-oriented trajectory design and optimization"
authors = [{ name = "Grant Hecht" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "spiceypy",
    "seaborn",
    "intel-openmp; sys_platform == 'win32'",
]

[project.optional-dependencies]
basemap = ["basemap"]
docs = ["sphinx", "furo", "breathe", "exhale"]

[project.urls]
Homepage = "https://github.com/GrantHecht/tycho"

[tool.scikit-build]
cmake.build-type = "Release"
# Wheel builds only need the _tychopy extension; stub generation targets
# (added to the default `all` target by nanobind_add_stub) import the freshly
# built .so, which can fail when the wheel-build env's loader resolves a
# libstdc++ older than what the .so requires. The install rules ship the
# committed source-tree snapshot at tychopy/_stubs/ — regeneration during
# the wheel build is unnecessary. Developers refresh stubs explicitly via
# `ninja tychopy_stubs_snapshot` and commit the result.
cmake.targets = ["_tychopy"]
# Pure-Python package collected from source tree; _tychopy extension installed via CMake install()
wheel.packages = ["tychopy"]
# Stubs for the _tychopy extension live in the source tree at tychopy/_stubs/
# for review-diff convenience, but for PEP 561 they MUST land at site-packages
# ROOT (next to _tychopy.cpython-*.so) — not nested under tychopy/_stubs/.
# CMake install rules in src/bindings/CMakeLists.txt copy them to the correct
# location at wheel-build time; we exclude the source-tree _stubs/ from the
# wheel-packaged copy of tychopy/ to keep the wheel layout clean.
# (tychopy/py.typed travels naturally via wheel.packages — it sits inside the
# package directory.)
wheel.exclude = [
    "tychopy/_stubs/**",
]

[tool.ruff]
line-length = 88
exclude = ["dep/", "build/", "*.egg-info"]

[tool.ruff.lint]
select = ["I"] # isort only; formatting is handled by ruff format

[tool.ruff.format]
# Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.isort]
profile = "black"
