[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "tychopy"
version = "0.1.0"
description = "High-speed, extensible, object-oriented trajectory design and optimization"
authors = [{ name = "Grant Hecht" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "spiceypy",
    "seaborn",
    "intel-openmp; sys_platform == 'win32'",
]

[project.optional-dependencies]
basemap = ["basemap"]
docs = ["sphinx", "furo", "breathe", "exhale"]

[project.urls]
Homepage = "https://github.com/GrantHecht/tycho"

[tool.scikit-build]
cmake.build-type = "Release"
# Pure-Python package collected from source tree; _tychopy extension installed via CMake install()
wheel.packages = ["tychopy"]
# Stubs for the _tychopy extension live in the source tree at tychopy/_stubs/
# for review-diff convenience, but for PEP 561 they MUST land at site-packages
# ROOT (next to _tychopy.cpython-*.so) — not nested under tychopy/_stubs/.
# CMake install rules in src/bindings/CMakeLists.txt copy them to the correct
# location at wheel-build time; we exclude the source-tree _stubs/ from the
# wheel-packaged copy of tychopy/ to keep the wheel layout clean.
# (tychopy/py.typed travels naturally via wheel.packages — it sits inside the
# package directory.)
# Wheel contains only the Python extension (_tychopy.so), its stubs, and the
# pure-Python tychopy/ package. The CMake install rules also produce a C++
# distribution (headers under include/, package config under lib64/cmake/tycho/)
# intended for `find_package(tycho)` consumers via `cmake --install`; those
# artifacts are not Python-runtime-relevant and are filtered out of the wheel.
wheel.exclude = [
    "tychopy/_stubs/**",
    "include/**",
    "lib/**",
    "lib64/**",
    "share/**",
]

[tool.ruff]
line-length = 88
exclude = ["dep/", "build/", "*.egg-info"]

[tool.ruff.lint]
select = ["I"] # isort only; formatting is handled by ruff format

[tool.ruff.format]
# Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.isort]
profile = "black"
