[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "tychopy"
version = "0.1.0"
description = "High-speed, extensible, object-oriented trajectory design and optimization"
authors = [{ name = "Grant Hecht" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "spiceypy",
    "seaborn",
    "intel-openmp; sys_platform == 'win32'",
]

[project.optional-dependencies]
basemap = ["basemap"]
docs = [
    "sphinx>=7.3,<9",
    "pydata-sphinx-theme>=0.15",
    "myst-parser>=2.0",
    "sphinx-design>=0.5",
    "sphinx-copybutton>=0.5",
    "sphinx-togglebutton>=0.3",
    "breathe>=4.35",
]

[project.urls]
Homepage = "https://github.com/GrantHecht/tycho"

[tool.scikit-build]
cmake.build-type = "Release"
# Pure-Python package collected from source tree; _tychopy extension installed via CMake install()
wheel.packages = ["tychopy"]
# Stubs live in tychopy/_stubs/ in the source tree (review-diff friendly) but
# PEP 561 requires them at site-packages root, next to _tychopy.cpython-*.so —
# CMake install rules in src/bindings/CMakeLists.txt do that relocation.
# Source-tree _stubs/ is excluded from the wheel-packaged copy of tychopy/.
# include/, lib*/, share/ are CMake C++-distribution artifacts (for
# find_package(tycho) consumers via `cmake --install`), not Python-runtime
# files — filtered out so the wheel ships only Python deliverables.
wheel.exclude = [
    "tychopy/_stubs/**",
    "include/**",
    "lib/**",
    "lib64/**",
    "share/**",
    "bin/**",
]

[tool.ruff]
line-length = 88
exclude = ["dep/", "build/", "*.egg-info"]

[tool.ruff.lint]
select = ["I"] # isort only; formatting is handled by ruff format

[tool.ruff.format]
# Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.isort]
profile = "black"
